refactor(primitives): use List.of instead of Arrays.asList in RlpList [REVIEW7-5.1]
Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>